--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
+android {
+    lintOptions {
+        abortOnError false
+    }
+}
