--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+android {
+    lintOptions {
+        abortOnError false
+    }
+}
